hw/bsp: Update all STMF4 BSPs to use common startup
This removes local startup code and linker scripts

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/bsp/black_vet6/pkg.yml
+++ b/hw/bsp/black_vet6/pkg.yml
@@ -38,3 +38,4 @@ pkg.deps:
     - "@apache-mynewt-core/libc"
     - "@apache-mynewt-core/hw/drivers/flash/spiflash"
     - "@apache-mynewt-core/hw/scripts"
+    - "@apache-mynewt-core/boot/startup"
