--- a/hw/bsp/nucleo-f411re/pkg.yml
+++ b/hw/bsp/nucleo-f411re/pkg.yml
@@ -38,3 +38,4 @@ pkg.deps:
     - "@apache-mynewt-core/hw/mcu/stm/stm32f4xx"
     - "@apache-mynewt-core/libc"
     - "@apache-mynewt-core/hw/scripts"
+    - "@apache-mynewt-core/boot/startup"
