--- a/hw/bsp/apollo2_evb/bsp.yml
+++ b/hw/bsp/apollo2_evb/bsp.yml
@@ -19,9 +19,9 @@
 
 # Flash sector size: 8 kB.
 
-bsp.name: "Apollo EVB"
-bsp.url: https://www.ambiqmicro.com/mcu/
-bsp.maker: "Ambiq micro"
+bsp.name: "Apollo2 EVB"
+bsp.url: https://ambiq.com/apollo2/
+bsp.maker: "Ambiq Micro"
 bsp.arch: cortex_m4
 bsp.compiler: compiler/arm-none-eabi-m4
 bsp.linkerscript:
