--- a/hw/bsp/rb-blend2/bsp.yml
+++ b/hw/bsp/rb-blend2/bsp.yml
@@ -18,7 +18,7 @@
 #
 
 bsp.name: "Blend 2"
-bsp.url: https://redbear.cc/product/retired/blend-2.html
+bsp.url: https://github.com/redbear/nRF5x/tree/master/nRF52832#blend-2
 bsp.maker: "RedBear"
 bsp.arch: cortex_m4
 bsp.compiler: compiler/arm-none-eabi-m4
