hw/bsp: Use common startup in STM32F0 boards
This
- switches to use autogenerated linker script
- removes .cmd files
- removes local versions of startup code

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/bsp/nucleo-f072rb/syscfg.yml
+++ b/hw/bsp/nucleo-f072rb/syscfg.yml
@@ -23,6 +23,9 @@ syscfg.defs:
         value: 128
 
 syscfg.vals:
+    MCU_RAM_START: 0x20000000
+    MCU_RAM_SIZE: 0x4000
+    INCLUDE_IMAGE_HEADER: 0
     REBOOT_LOG_FLASH_AREA: FLASH_AREA_REBOOT_LOG
     CONFIG_FCB_FLASH_AREA: FLASH_AREA_NFFS
     NFFS_FLASH_AREA: FLASH_AREA_NFFS
