hw/bsp: Fix Watchdog interval for STM32 BSPs
Default value 30s is out of range for all STM32 devices.

This sets WATCHDOG_INTERVAL to maximum correct value that
depends on LSI_VALUE for each MCU.

Additionally static assert is added to hal_watchdog.c
that checks if WATCHDOG_INTERVAL value does not exceed range.

--- a/hw/bsp/black_vet6/syscfg.yml
+++ b/hw/bsp/black_vet6/syscfg.yml
@@ -64,6 +64,7 @@ syscfg.vals:
     STM32_FLASH_PREFETCH_ENABLE: 1
     STM32_INSTRUCTION_CACHE_ENABLE: 1
     STM32_DATA_CACHE_ENABLE: 1
+    WATCHDOG_INTERVAL: 25000
 
     SPI_0_MASTER: 1
     # On board SPIFLASH configuration for W25Q16VBS
