--- a/hw/bsp/nucleo-g0b1re/syscfg.yml
+++ b/hw/bsp/nucleo-g0b1re/syscfg.yml
@@ -51,6 +51,7 @@ syscfg.vals:
     STM32_CLOCK_APB4_DIVIDER: 'RCC_HCLK_DIV1'
     STM32_CLOCK_PLLRGE: 'RCC_PLLVCIRANGE_0'
     STM32_FLASH_LATENCY: 'FLASH_LATENCY_2'
+    WATCHDOG_INTERVAL: 28000
     UART_0: 0
     UART_1: 1
     UART_0_PIN_TX: 'MCU_GPIO_PORTC(4)'
