--- a/hw/bsp/nucleo-h723zg/syscfg.yml
+++ b/hw/bsp/nucleo-h723zg/syscfg.yml
@@ -57,6 +57,7 @@ syscfg.vals:
     STM32_CLOCK_PLLRGE: 'RCC_PLL1VCIRANGE_3'
     STM32_FLASH_LATENCY: 'FLASH_LATENCY_3'
     STM32_ENABLE_ICACHE: 0
+    WATCHDOG_INTERVAL: 28000
     UART_0_PIN_TX: 'MCU_GPIO_PORTD(8)'
     UART_0_PIN_RX: 'MCU_GPIO_PORTD(9)'
     SPI_0_PIN_SS: 'MCU_GPIO_PORTD(14)'
