--- a/hw/bsp/nucleo-f072rb/syscfg.yml
+++ b/hw/bsp/nucleo-f072rb/syscfg.yml
@@ -41,6 +41,7 @@ syscfg.vals:
     STM32_CLOCK_APB1_DIVIDER: 'RCC_HCLK_DIV1'
     STM32_FLASH_LATENCY: 'FLASH_LATENCY_1'
     STM32_FLASH_PREFETCH_ENABLE: 1
+    WATCHDOG_INTERVAL: 22000
     UART_0_PIN_TX: 'MCU_GPIO_PORTA(2)'
     UART_0_PIN_RX: 'MCU_GPIO_PORTA(3)'
     UART_1_PIN_TX: 'MCU_GPIO_PORTA(9)'
