--- a/hw/bsp/stm32f3discovery/syscfg.yml
+++ b/hw/bsp/stm32f3discovery/syscfg.yml
@@ -50,6 +50,7 @@ syscfg.vals:
     STM32_CLOCK_APB2_DIVIDER: 'RCC_HCLK_DIV1'
     STM32_FLASH_LATENCY: 'FLASH_LATENCY_2'
     STM32_FLASH_PREFETCH_ENABLE: 1
+    WATCHDOG_INTERVAL: 22000
     UART_0_PIN_TX: 'MCU_GPIO_PORTA(9)'
     UART_0_PIN_RX: 'MCU_GPIO_PORTA(10)'
     SPI_0_PIN_SS: 'MCU_GPIO_PORTA(4)'
