--- a/hw/bsp/stm32f7discovery/syscfg.yml
+++ b/hw/bsp/stm32f7discovery/syscfg.yml
@@ -46,6 +46,7 @@ syscfg.vals:
     STM32_FLASH_LATENCY: 'FLASH_LATENCY_7'
     STM32_FLASH_PREFETCH_ENABLE: 1
     STM32_ART_ACCLERATOR_ENABLE: 1
+    WATCHDOG_INTERVAL: 28000
     UART_0_PIN_TX: 'MCU_GPIO_PORTA(9)'
     UART_0_PIN_RX: 'MCU_GPIO_PORTB(7)'
     TIMER_0_TIM: 'TIM1'
