--- a/hw/bsp/weact_g431cb/syscfg.yml
+++ b/hw/bsp/weact_g431cb/syscfg.yml
@@ -52,6 +52,7 @@ syscfg.vals:
     STM32_CLOCK_APB4_DIVIDER: 'RCC_HCLK_DIV1'
     STM32_CLOCK_PLLRGE: 'RCC_PLLVCIRANGE_0'
     STM32_FLASH_LATENCY: 'FLASH_LATENCY_4'
+    WATCHDOG_INTERVAL: 28000
     UART_0_PIN_TX: 'MCU_GPIO_PORTA(9)'
     UART_0_PIN_RX: 'MCU_GPIO_PORTA(10)'
     UART_1_PIN_TX: 'MCU_GPIO_PORTA(2)'
