hw/mcu/stm32: Add option to place WFI in RAM
Some STM32 devices have erratas for flash related
issues that recommend workaround of placing WFI
instruction in RAM.
This is the case for STM32F4xx devices where other
solution was to put WFI instruction at specific
address locations (divisible by 8).

New syscfg value STM32_WFI_FROM_RAM is introduced that
adds function stm32_wfi_from_ram().

STM32_WFI is also added and can be used instead
of WFI when needed

BSP for affected STM32F4xx devices now use WFI from RAM
instead of placing WFI instruction at aligne address.
STM32L0 devices are also updated since anomally was also
observed there.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/hw/bsp/ada_feather_stm32f405/syscfg.yml
+++ b/hw/bsp/ada_feather_stm32f405/syscfg.yml
@@ -48,6 +48,7 @@ syscfg.vals:
     STM32_FLASH_PREFETCH_ENABLE: 1
     STM32_INSTRUCTION_CACHE_ENABLE: 1
     STM32_DATA_CACHE_ENABLE: 1
+    STM32_WFI_FROM_RAM: 1
     WATCHDOG_INTERVAL: 28000
     # UART0 is on the large breakout connector, pins TX and RX.
     UART_0_PIN_TX: 'MCU_GPIO_PORTB(10)'
