tinyusb/msc_fat_view: Add multiply write handlers
This update msc_fat_view so:
- statically added entries (link tables) can be hidden
  if valid() tells to hide
- there was only one handler that could take care of
  writes to unallocated disk area. Now several can be
  used (image write, config write, possible U2C)

--- a/hw/usb/tinyusb/msc_fat_view/pkg.yml
+++ b/hw/usb/tinyusb/msc_fat_view/pkg.yml
@@ -67,6 +67,8 @@ pkg.source_files.MSC_FAT_VIEW_CONFIG:
 
 pkg.link_tables:
     - msc_fat_view_root_entry
+    - msc_fat_view_write_handlers
+    - msc_fat_view_media_insert_handlers
 
 pkg.init.'(!BOOT_LOADER && TINYUSB_AUTO_START!=0)':
     msc_fat_view_pkg_init: $before:tinyusb_start
