hw/bsp: Update all STMF3 BSPs to use common startup
This removes local startup code and linker scripts

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/hw/bsp/nucleo-f303k8/syscfg.yml
+++ b/hw/bsp/nucleo-f303k8/syscfg.yml
@@ -23,6 +23,8 @@ syscfg.defs:
         value: 64
 
 syscfg.vals:
+    MCU_RAM_START: 0x20000000
+    MCU_RAM_SIZE: 12K
     REBOOT_LOG_FLASH_AREA: FLASH_AREA_REBOOT_LOG
     CONFIG_FCB_FLASH_AREA: FLASH_AREA_NFFS
     NFFS_FLASH_AREA: FLASH_AREA_NFFS
@@ -47,3 +49,9 @@ syscfg.vals:
     UART_1_PIN_RTS: 'MCU_GPIO_PORTA(12)'
     UART_1_PIN_CTS: 'MCU_GPIO_PORTA(11)'
     TIMER_0_TIM: 'TIM15'
+
+    # Flasher parameters
+    MYNEWT_DOWNLOADER: openocd
+    MYNEWT_DOWNLOADER_OPENOCD_BOARD: board/st_nucleo_f3.cfg
+    MYNEWT_DOWNLOADER_MFG_IMAGE_FLASH_OFFSET: 0x08000000
+    JLINK_TARGET: STM32F303K8
