--- a/hw/bsp/nucleo-f303re/syscfg.yml
+++ b/hw/bsp/nucleo-f303re/syscfg.yml
@@ -23,8 +23,11 @@ syscfg.defs:
         value: 512
 
 syscfg.vals:
+    MCU_RAM_START: 0x20000000
+    MCU_RAM_SIZE: 64K
     REBOOT_LOG_FLASH_AREA: FLASH_AREA_REBOOT_LOG
     CONFIG_FCB_FLASH_AREA: FLASH_AREA_NFFS
+    CONFIG_FCB_NUM_AREAS: 23
     NFFS_FLASH_AREA: FLASH_AREA_NFFS
     COREDUMP_FLASH_AREA: FLASH_AREA_IMAGE_1
     STM32_CLOCK_HSI: 1
@@ -47,3 +50,9 @@ syscfg.vals:
     UART_1_PIN_RTS: 'MCU_GPIO_PORTA(12)'
     UART_1_PIN_CTS: 'MCU_GPIO_PORTA(11)'
     TIMER_0_TIM: 'TIM15'
+
+    # Flasher parameters
+    MYNEWT_DOWNLOADER: openocd
+    MYNEWT_DOWNLOADER_OPENOCD_BOARD: board/st_nucleo_f3.cfg
+    MYNEWT_DOWNLOADER_MFG_IMAGE_FLASH_OFFSET: 0x08000000
+    JLINK_TARGET: STM32F303RE
