--- a/hw/bsp/nucleo-f767zi/syscfg.yml
+++ b/hw/bsp/nucleo-f767zi/syscfg.yml
@@ -27,6 +27,8 @@ syscfg.defs:
         value: 12
 
 syscfg.vals:
+    MCU_RAM_START: 0x20020000
+    MCU_RAM_SIZE: 368K
     REBOOT_LOG_FLASH_AREA: FLASH_AREA_REBOOT_LOG
     CONFIG_FCB_FLASH_AREA: FLASH_AREA_NFFS
     NFFS_FLASH_AREA: FLASH_AREA_NFFS
