--- a/hw/drivers/flash/spiflash/syscfg.yml
+++ b/hw/drivers/flash/spiflash/syscfg.yml
@@ -35,6 +35,11 @@ syscfg.defs:
             second clock edge latches data).
         value: HAL_SPI_MODE3
 
+    SPIFLASH_STAT:
+        description: >
+            Enable statistics for driver.
+        value: 0
+
     SPIFLASH_SECTOR_COUNT:
         description: 'Number of sectors'
         value:  0
