tinyusb/dfu: Add option to enter booloader on reset pin
For device that don't have any button to use to enter bootloader
this adds possibility to enter bootloader after number of
pin resets. Number of resets is kept in NVReg of user choice.

Additionally if user application enters correct value into NVReg
and calls hal_system_reset it can directly start bootloader
with dfu capabilities.

Additionally USBD_DFU_MAGIC_NVREG and USBD_DFU_MAGIC_VALUE
syscfg values can be directly use to enter DFU mode in boot.
If this register is written with magic value by application
after reset bootloader will start in DFU mode.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/hw/usb/tinyusb/dfu/syscfg.yml
+++ b/hw/usb/tinyusb/dfu/syscfg.yml
@@ -93,6 +93,29 @@ syscfg.defs:
             Set to 2 if boto pin needs internal pull-down resistor.
         value: 0
 
+    USBD_DFU_RESET_COUNT_NVREG:
+        description: >
+            NVReg number to use for reset counting.
+        value: -1
+    USBD_DFU_RESET_COUNT:
+        description: >
+            Number of time bootloader must detects reset cause by reset pin before
+            starting dfu bootloader.
+            This can be usefull if board does not have dedicated button that can
+            be used to switch to DFU mode during boot.
+            Pressing Reset button this number of times will start DFU in bootloader.
+        value: 0
+    USBD_DFU_MAGIC_NVREG:
+        description: >
+            NVReg register number to use in bootloader to start DFU.
+        value: -1
+    USBD_DFU_MAGIC_VALUE:
+        description: >
+            Value stored in NVReg (indexed by USBD_DFU_MAGIC_NVREG)
+            to start DFU. This can be used by application that does not have
+            DFU support to request DFU in bootloader.
+        value: 0xDF00DF00
+
     USBD_DFU_SYSINIT_STAGE:
         description: >
             Sysinit stage for DFU functionality.
