flash_test: Add flash area access support
There was "flash area" command that showed flash areas.
To read or write actual flash area user had to specify flash id
and offset from the beginning of flash to read data from flash area.

Now when command start with 'flash area' id that used mean flash id
will mean flash area id. Than makes it more convenient to read specific
flash area.

Additionally command that showed sectors from given flash is modified.
It used to show up to 32 sectors with sized and later ... would follow.

Now same size sectors are showed in more compact manner.

Hexadecimal values were printed inconsistently with or without 0x prefix,
now all hex values starts with 0x

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/test/flash_test/pkg.yml
+++ b/test/flash_test/pkg.yml
@@ -26,6 +26,7 @@ pkg.deps:
     - "@apache-mynewt-core/kernel/os"
     - "@apache-mynewt-core/hw/hal"
     - "@apache-mynewt-core/sys/shell"
+    - "@apache-mynewt-core/util/parse"
 pkg.req_apis:
     - console
 
