hw/mcu/stm32: Add option to set HSE_VALUE from syscfg
This adds STM32_CLOCK_HSE_VALUE that can be used to
specify HSE frequency in mynewt style.
It could be always set w macro HSE_VALUE but this makes
it easier to manipulate this value in similar way
as most other parameters.

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/mcu/stm/stm32h7xx/syscfg.yml
+++ b/hw/mcu/stm/stm32h7xx/syscfg.yml
@@ -58,6 +58,10 @@ syscfg.defs:
         description: 0 for xtal; 1 for input clock
         value: 0
 
+    STM32_CLOCK_HSE_VALUE:
+        description: High-speed external clock speed in Hz
+        value:
+
     STM32_CLOCK_HSI:
         description: Enable high-speed internal clock source
         value: 1
