--- a/hw/mcu/stm/stm32wbxx/syscfg.yml
+++ b/hw/mcu/stm/stm32wbxx/syscfg.yml
@@ -75,6 +75,10 @@ syscfg.defs:
         description: Enable HSE prescaler divider
         value: 0
 
+    STM32_CLOCK_HSE_VALUE:
+        description: High-speed external clock speed in Hz
+        value:
+
     STM32_CLOCK_HSI:
         description: Enable high-speed internal clock source
         value: 1
