mcu/lpc55: Add USB_SRAM to generated linker script
USB_SRAM region is required when USB1 (High Speed)
is to be used.

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/mcu/nxp/lpc55xx/syscfg.yml
+++ b/hw/mcu/nxp/lpc55xx/syscfg.yml
@@ -35,6 +35,9 @@ syscfg.defs:
             - PLL1_150M
         value: FRO12M
 
+    MCU_PATH:
+        value: '"repos/apache-mynewt-core/hw/mcu/nxp/lpc55xx"'
+
     UART_0:
         description: 'Whether to enable UART0 (Flexcomm0)'
         value:  0
