tinyusb: Add support for USB selection
Some MCU have more then one USB controller
So far RHPORT0 was always used.
Only one USB device can be configured in mynewt
(host is not supported yet)
Now application can decide which USB controller to use
by specifying USBD_RHPORT: USB0 or USB1

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/usb/tinyusb/syscfg.yml
+++ b/hw/usb/tinyusb/syscfg.yml
@@ -53,3 +53,10 @@ syscfg.defs:
         description: >
             Enable USB high speed if device supports it.
         value: 0
+    USBD_RHPORT:
+        description:
+            Selects which peripheral is used for USBD
+        value: USB0
+        choices:
+            - USB0
+            - USB1
