tinyusb: Add support for LPC55xx devices
This adds code required by TinyUSB to configure
USB clocks, pins and interrupts.

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/mcu/nxp/mcux-sdk/syscfg.yml
+++ b/hw/mcu/nxp/mcux-sdk/syscfg.yml
@@ -519,7 +519,10 @@ syscfg.defs:
         description: MCU MKW41Z4 is used.
         value:
     MCU_LPCXXXX:
-        description: LPC_XXXXX MCU
+        description: LPCXXX MCU
+        value:
+    MCU_LPC55XX:
+        description: LPC55XX MCU
         value:
 
     MCUX_DRIVERS_ACMP:
@@ -1221,3 +1224,6 @@ syscfg.defs:
     MCUX_DRIVERS_XRDC2:
         description: Add drivers/xrdc2 to the build
         value:
+
+syscfg.vals.MCU_LPC55S28:
+    MCU_LPC55XX: 1
