--- a/hw/usb/tinyusb/pkg.yml
+++ b/hw/usb/tinyusb/pkg.yml
@@ -44,6 +44,8 @@ pkg.deps.'MCU_TARGET == "nRF52840"':
     - "@apache-mynewt-core/hw/usb/tinyusb/nrf5x"
 pkg.deps.'MCU_TARGET == "nRF5340_APP"':
     - "@apache-mynewt-core/hw/usb/tinyusb/nrf53"
+pkg.deps.MCU_LPC55XX:
+    - "@apache-mynewt-core/hw/usb/tinyusb/lpc55"
 pkg.deps.MCU_STM32F4:
     - "@apache-mynewt-core/hw/usb/tinyusb/synopsys"
 pkg.deps.MCU_STM32H7:
