uncrustify: Update configuration
Changes Uncrustify configuration to align with the guidelines outlined in `CODING_STANDARDS.md`

--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -293,7 +293,7 @@ indent_cpp_lambda_body          = false    # false/true
 
 # Add or remove space around arithmetic operator '+', '-', '/', '*', etc
 # also '>>>' '<<' '>>' '%' '|'
-sp_arith                        = ignore   # ignore/add/remove/force
+sp_arith                        = force   # ignore/add/remove/force
 
 # Add or remove space around assignment operator '=', '+=', etc
 sp_assign                       = force    # ignore/add/remove/force
@@ -486,7 +486,7 @@ sp_before_squares               = ignore   # ignore/add/remove/force
 sp_inside_square                = ignore   # ignore/add/remove/force
 
 # Add or remove space after ','
-sp_after_comma                  = ignore   # ignore/add/remove/force
+sp_after_comma                  = force   # ignore/add/remove/force
 
 # Add or remove space before ','. Default=Remove
 sp_before_comma                 = remove   # ignore/add/remove/force
@@ -1072,10 +1072,10 @@ nl_start_of_file                = remove   # ignore/add/remove/force
 nl_start_of_file_min            = 0        # number
 
 # Add or remove newline at the end of the file
-nl_end_of_file                  = ignore   # ignore/add/remove/force
+nl_end_of_file                  = force   # ignore/add/remove/force
 
 # The number of newlines at the end of the file (only used if nl_end_of_file is 'add' or 'force')
-nl_end_of_file_min              = 0        # number
+nl_end_of_file_min              = 1        # number
 
 # Add or remove newline between '=' and '{'
 nl_assign_brace                 = remove   # ignore/add/remove/force
@@ -1616,10 +1616,10 @@ nl_between_get_set              = 0        # number
 nl_property_brace               = ignore   # ignore/add/remove/force
 
 # Whether to remove blank lines after '{'
-eat_blanks_after_open_brace     = false    # false/true
+eat_blanks_after_open_brace     = true    # false/true
 
 # Whether to remove blank lines before '}'
-eat_blanks_before_close_brace   = false    # false/true
+eat_blanks_before_close_brace   = true    # false/true
 
 # How aggressively to remove extra newlines not in preproc.
 # 0: No change
@@ -1889,7 +1889,7 @@ pp_define_at_level              = false    # false/true
 
 # True:  indent_func_call_param will be used (default)
 # False: indent_func_call_param will NOT be used
-use_indent_func_call_param      = false    # false/true
+use_indent_func_call_param      = true    # false/true
 
 # The value of the indentation for a continuation line is calculate differently if the line is:
 #   a declaration :your case with QString fileName ...
