lvgl: Add driver for ft6x36 touch screen
This adds basic driver for touch screen controller FT6x36

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@gmail.com>

--- a/hw/drivers/display/lvgl/pkg.yml
+++ b/hw/drivers/display/lvgl/pkg.yml
@@ -75,6 +75,8 @@ pkg.deps.LVGL_XPT2046:
     - "@apache-mynewt-core/hw/drivers/display/lvgl/indev/xpt2046"
 pkg.deps.LVGL_STMPE610:
     - "@apache-mynewt-core/hw/drivers/display/lvgl/indev/stmpe610"
+pkg.deps.LVGL_FT6X36:
+    - "@apache-mynewt-core/hw/drivers/display/lvgl/indev/ft6x36"
 pkg.deps.LVGL_ADC_TOUCH:
     - "@apache-mynewt-core/hw/drivers/display/lvgl/indev/adc_touch"
 pkg.deps.LVGL_TRACKBALL:
