lvgl: Add IPS parameters to ILI9341 driver
Some ILI9341 displays are IPS not TFT and
they require different configuration.

This adds syscfg value to use configuration
suitable for IPS displays base on ILI9341
controller.

Signed-off-by: Jerzy Kasenberg <jerzy@apache.org>

--- a/hw/drivers/display/lvgl/tft/ili9341/syscfg.yml
+++ b/hw/drivers/display/lvgl/tft/ili9341/syscfg.yml
@@ -17,6 +17,12 @@
 #
 
 syscfg.defs:
+    ILI9341_IPS:
+        description: >
+            Use configuration for IPS display.
+            IPS displays require different register values to show
+            correct colors.
+        value: 0
 
 syscfg.vals:
     LVGL_DISPLAY_HORIZONTAL_RESOLUTION: 240
