baselibc: Add option to enable extra debugging for malloc/free

--- a/libc/baselibc/pkg.yml
+++ b/libc/baselibc/pkg.yml
@@ -34,5 +34,8 @@ pkg.init.BASELIBC_THREAD_SAFE_HEAP_ALLOCATION:
 pkg.cflags:
     - -fno-builtin-malloc
 
+pkg.cflags.BASELIBC_DEBUG_MALLOC:
+    - -DDEBUG_MALLOC
+
 pkg.lflags:
     - -umain
