--- a/hw/mcu/dialog/da1469x/syscfg.yml
+++ b/hw/mcu/dialog/da1469x/syscfg.yml
@@ -88,6 +88,18 @@ syscfg.defs:
         value: 1
         restrictions: '!0'
 
+    MCU_CLOCK_XTAL32K_CAL_REF_CNT:
+        description: >
+            Reference count value for calibration of XTAL32K clock.
+        value: 100
+        restrictions: '!0'
+
+    MCU_CLOCK_RC32M_CAL_REF_CNT:
+        description: >
+            Reference count value for calibration of RC32M clock.
+        value: 100
+        restrictions: '!0'
+
     MCU_SYSCLK_SOURCE:
         description: >
             Specifies system clock source
