--- a/hw/mcu/dialog/da1469x/syscfg.yml
+++ b/hw/mcu/dialog/da1469x/syscfg.yml
@@ -67,6 +67,11 @@ syscfg.defs:
             Specifies settling time [ms] of 32K crystal oscillator.
         value: 8000
 
+    MCU_CLOCK_XTAL32K_ALLOW_CALIB:
+        description: >
+            Specifies that the 32K crystal oscillator should be calibrated.
+        value: 0
+
     MCU_CLOCK_RCX_CAL_REF_CNT:
         description: >
             Reference count value for calibration of RCX clock. The higher
@@ -81,6 +86,18 @@ syscfg.defs:
         description: >
             Reference count value for calibration of RC32K clock.
         value: 1
+        restrictions: '!0'
+
+    MCU_CLOCK_XTAL32K_CAL_REF_CNT:
+        description: >
+            Reference count value for calibration of XTAL32K clock.
+        value: 100
+        restrictions: '!0'
+
+    MCU_CLOCK_RC32M_CAL_REF_CNT:
+        description: >
+            Reference count value for calibration of RC32M clock.
+        value: 100
         restrictions: '!0'
 
     MCU_SYSCLK_SOURCE:
