ci: Enable newt test on Mac
We properly support 64bit in native target now so those can be
re-enabled.

--- a/.github/workflows/newt_test_all.yml
+++ b/.github/workflows/newt_test_all.yml
@@ -24,18 +24,23 @@ on: [push, pull_request]
 jobs:
   newt_test:
     name: Run newt test all
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-13]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
           go-version: 'stable'
       - name: Install Dependencies
+        if: matrix.os == 'ubuntu-latest'
         run: |
              sudo apt-get update
              sudo apt-get install -y gcc-multilib
       - name: Install GNU sed
-        if: matrix.os == 'macos-latest'
+        if: matrix.os == 'macos-13'
         run: |
              brew install gnu-sed
              echo "$(brew --prefix)/opt/gnu-sed/libexec/gnubin" >> $GITHUB_PATH
