--- a/.github/workflows/newt_test_all.yml
+++ b/.github/workflows/newt_test_all.yml
@@ -52,7 +52,7 @@ jobs:
         shell: bash
         run: |
              newt new build
-             cp -f .github/project.yml build/project.yml
+             cp -f .github/project_newt_test_all.yml build/project.yml
              cd build
              newt upgrade --shallow=1
              git -C repos/apache-mynewt-core fetch origin $GITHUB_SHA
