sys/config: Add option to skip dup check when saving values (#3324)
By default value is written to config storage only if it changed since
last stored value. This however requires that all stored values are read
to determine last value and in case of conf_save this is done for each
saved value which can take a lot of time.

This adds option to skip that dup check and simply stores new value.
This results in much faster writes at the expense of load times as there
are more copies of the same value stored. Also conf_save will always
write all exported values so this increase number of writes to flash.
However, e.g. in case of large FCB used as config storage dup check on
write can take much longer than simple read or store without dup checks.

--- a/sys/config/syscfg.yml
+++ b/sys/config/syscfg.yml
@@ -99,6 +99,13 @@ syscfg.defs:
             For MCU without hardware support for enabling this if no other
             function use floating point may increase image size 20kB or more.
         value: 0
+    CONFIG_NO_DUP_CHECK:
+        description: >
+            This disables check for duplicate values when saving new value.
+            Depending on number of values stored in config this may speed up
+            the config save process considerably at the expense of more writes
+            to config storage.
+        value: 0
 
 syscfg.vals.HARDFLOAT:
     CONFIG_FLOAT_SUPPORT: 1
