Prepare for Apache Mynewt 1.13.0 release

--- a/repository.yml
+++ b/repository.yml
@@ -40,6 +40,7 @@ repo.versions:
     "1.10.0": "mynewt_1_10_0_tag"
     "1.11.0": "mynewt_1_11_0_tag"
     "1.12.0": "mynewt_1_12_0_tag"
+    "1.13.0": "mynewt_1_13_0_tag"
 
     "0-latest": "1.12.0"
     "1-latest": "1.12.0"
@@ -60,6 +61,7 @@ repo.versions:
     "1.10-latest": "1.10.0"
     "1.11-latest": "1.11.0"
     "1.12-latest": "1.12.0"
+    "1.13-latest": "1.13.0"
 
 repo.newt_compatibility:
     # Allow all versions for 0.0.0.  This is a workaround to prevent a warning
@@ -78,6 +80,9 @@ repo.newt_compatibility:
     # Core 1.10.0+ requires newt 1.10.0+ (feature: const sysval)
     # Core 1.11.0+ requires newt 1.11.0+ (feature: external modules)
     # Core 1.12.0+ requires newt 1.12.0+ (feature: generated linked scripts)
+    # Core 1.13.0+ requires newt 1.13.0+ (feature: modlog module name generation)
+    1.13.0:
+        1.13.0: good
     1.12.0:
         1.12.0: good
     1.11.0:
@@ -122,6 +127,7 @@ repo.deps:
             mynewt_1_10_0_tag: 1.5.0
             mynewt_1_11_0_tag: 1.6.0
             mynewt_1_12_0_tag: 1.7.0
+            mynewt_1_13_0_tag: 1.8.0
 
     mcuboot:
         type: github
@@ -136,6 +142,7 @@ repo.deps:
             mynewt_1_10_0_tag: 1.7.2
             mynewt_1_11_0_tag: 1.10.0
             mynewt_1_12_0_tag: 2.0.0
+            mynewt_1_13_0_tag: 2.1.0
 
     apache-mynewt-mcumgr:
         type: github
@@ -148,3 +155,4 @@ repo.deps:
             mynewt_1_10_0_tag: 0.3.0
             mynewt_1_11_0_tag: 0.4.0
             mynewt_1_12_0_tag: 0.4.0
+            mynewt_1_13_0_tag: 0.5.0
