hw/cmsis-core: Add DSP includes to search path
This allows to use arm_math.h etc.

--- a/hw/cmsis-core/pkg.yml
+++ b/hw/cmsis-core/pkg.yml
@@ -29,6 +29,7 @@ pkg.type: sdk
 
 pkg.include_dirs:
     - "@arm-CMSIS_5/CMSIS/Core/Include"
+    - "@arm-CMSIS_5/CMSIS/DSP/Include"
 
 repository.arm-CMSIS_5:
     type: github
