--- a/fs/fatfs/syscfg.yml
+++ b/fs/fatfs/syscfg.yml
@@ -22,3 +22,15 @@ syscfg.defs:
         description: >
             Sysinit stage for FATFS functionality.
         value: 200
+
+    FATFS_LOG_MODULE:
+        description: 'Numeric module ID to use for FATFS log messages.'
+        value: 253
+    FATFS_LOG_LVL:
+        description: 'Minimum level for the FATFS log.'
+        value: 2
+
+syscfg.logs:
+    FATFS_LOG:
+        module: MYNEWT_VAL(FATFS_LOG_MODULE)
+        level: MYNEWT_VAL(FATFS_LOG_LVL)
