hw/bsp/nordic_pca10059: Switch to use common download script
With this change it's possible to flash USB dongle with
nrfutil without connected debugger (dongle does not have
SWD connector).

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/bsp/nordic_pca10059/pkg.yml
+++ b/hw/bsp/nordic_pca10059/pkg.yml
@@ -38,6 +38,7 @@ pkg.deps:
     - "@apache-mynewt-core/libc"
     - "@apache-mynewt-core/sys/flash_map"
     - "@apache-mynewt-core/boot/startup"
+    - "@apache-mynewt-core/hw/scripts"
 
 pkg.deps.SOFT_PWM:
     - "@apache-mynewt-core/hw/drivers/pwm/soft_pwm"
