hw/bsp/nordic_pca10056: Switch to use common download script
This also changes default downloader to nrfutil

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/bsp/nordic_pca10056/pkg.yml
+++ b/hw/bsp/nordic_pca10056/pkg.yml
@@ -37,6 +37,7 @@ pkg.cflags.HARDFLOAT:
 pkg.deps:
     - "@apache-mynewt-core/hw/mcu/nordic/nrf52xxx"
     - "@apache-mynewt-core/libc"
+    - "@apache-mynewt-core/hw/scripts"
     - "@apache-mynewt-core/sys/flash_map"
     - "@apache-mynewt-core/boot/startup"
 
