--- a/hw/bsp/nordic_pca10056/syscfg.yml
+++ b/hw/bsp/nordic_pca10056/syscfg.yml
@@ -66,6 +66,11 @@ syscfg.vals:
     QSPI_PIN_DIO3: 23
     GPIO_AS_PIN_RESET: 1
 
+    MYNEWT_DOWNLOADER: nrfutil
+    JLINK_TARGET: NRF52
+    PYOCD_TARGET: nrf52840
+    MYNEWT_DOWNLOADER_MFG_IMAGE_FLASH_OFFSET: 0x0
+
 syscfg.vals.BLE_CONTROLLER:
     TIMER_0: 0
     TIMER_5: 1
