hw/bsp/nordic_pca10028: Switch to use common download script
This also changes default downloader to nrfutil

Signed-off-by: Jerzy Kasenberg <jerzy.kasenberg@codecoup.pl>

--- a/hw/bsp/nordic_pca10028-16k/pkg.yml
+++ b/hw/bsp/nordic_pca10028-16k/pkg.yml
@@ -35,6 +35,7 @@ pkg.cflags:
 pkg.deps:
     - "@apache-mynewt-core/hw/mcu/nordic/nrf51xxx"
     - "@apache-mynewt-core/libc"
+    - "@apache-mynewt-core/hw/scripts"
 
 pkg.deps.UART_0:
     - "@apache-mynewt-core/hw/drivers/uart/uart_hal"
