--- a/hw/bsp/nordic_pca10028/syscfg.yml
+++ b/hw/bsp/nordic_pca10028/syscfg.yml
@@ -124,6 +124,12 @@ syscfg.vals:
     MCU_DCDC_ENABLED: 1
     MCU_LFCLK_SOURCE: LFXO
 
+    # Flasher parameters
+    MYNEWT_DOWNLOADER: nrfjprog
+    MYNEWT_DOWNLOADER_MFG_IMAGE_FLASH_OFFSET: 0x0
+    PYOCD_TARGET: nrf51
+    JLINK_TARGET: nRF51422_xxAC
+
 syscfg.vals.BLE_CONTROLLER:
     OS_CPUTIME_FREQ: 32768
     OS_CPUTIME_TIMER_NUM: 3
