--- a/apps/coremark/pkg.yml
+++ b/apps/coremark/pkg.yml
@@ -20,7 +20,7 @@
 pkg.name: apps/coremark
 pkg.type: app
 pkg.description: Industry-standard benchmark to measures the MCU performance.
-pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
+pkg.author: "Apache Mynewt <dev@mynewt.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
 
