--- a/apps/lora_app_shell/pkg.yml
+++ b/apps/lora_app_shell/pkg.yml
@@ -20,7 +20,7 @@
 pkg.name: apps/lora_app_shell
 pkg.type: app
 pkg.description: "Example application which uses a variety of lora app eatures."
-pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
+pkg.author: "Apache Mynewt <dev@mynewt.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
 
