--- a/hw/bsp/apollo2_evb/pkg.yml
+++ b/hw/bsp/apollo2_evb/pkg.yml
@@ -20,7 +20,7 @@
 pkg.name: hw/bsp/apollo2_evb
 pkg.type: bsp
 pkg.description: BSP definition for the Apollo I Evaluation board
-pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
+pkg.author: "Apache Mynewt <dev@mynewt.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
     - apollo2
