--- a/hw/drivers/adc/adc_nrf52/pkg.yml
+++ b/hw/drivers/adc/adc_nrf52/pkg.yml
@@ -19,7 +19,7 @@
 
 pkg.name: hw/drivers/adc/adc_nrf52
 pkg.description: ADC driver for the NRF52
-pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
+pkg.author: "Apache Mynewt <dev@mynewt.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
 pkg.deps:
