--- a/hw/drivers/pwm/pwm_stm32/pkg.yml
+++ b/hw/drivers/pwm/pwm_stm32/pkg.yml
@@ -19,7 +19,7 @@
 
 pkg.name: hw/drivers/pwm/pwm_stm32
 pkg.description: PWM driver for the STM32
-pkg.author: "Apache Mynewt <dev@mynewt.incubator.apache.org>"
+pkg.author: "Apache Mynewt <dev@mynewt.apache.org>"
 pkg.homepage: "http://mynewt.apache.org/"
 pkg.keywords:
 
